--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
 
         <section id="practices">
                     <div class="wrapper">
-                        <h3>Practices</h3> 
+                        <h3>Practices</h3>
+                        <div class="row">
+                            <div class="practices-column">
+                                <a href="drawing.html"><img src="images/my-work-sketch.jpg" alt=""></a>
+                                <a href="photo.html"><img src="images/photography-sunset.jpg" alt=""></a>  
+                            </div>
+                        </div>
                     </div>
         </section>
         
