--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                         <a href="https://www.facebook.com/alan.zheng.313/"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.instagram.com/haoliangzheng/"><i class="fab fa-instagram"></i></a>
-                        <a href="https://weibo.com/zhllb61/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1"><i
-                                class="fab fa-weibo"></i></a>
+                        <!-- <a href="https://weibo.com/zhllb61/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1"><i
+                                class="fab fa-weibo"></i></a> -->
                     </div>
                 </div>
             </div>
