--- a/index.html
+++ b/index.html
@@ -77,14 +77,11 @@
                 <div class="grid">
                     <div class="column">
                         <p>Name: Haoliang Zheng</p>
-                        <p>Age: 24</p>
+                        <p>Age: 25</p>
                         <p>Nation: China</p>
                         <p>Education: Bachelor of Visual Arts,<br>
                             Bachelor of Interactive Design</p>
-                        <p>I started to learn drawing since I was 4years old, and I'm good at hand-drawing. I graduated
-                            from AUT in 2019 and now I'm studying in MDS because I want to learn more pratical skills to
-                            improve myself. I like get along with kids, so I teach drawing and badminton as the part
-                            time job. I like to use my spare time to play rap because it really makes me relax.</p>
+                        <p>I started to learn drawing since I was 4years old, and I'm good at hand-drawing. I graduated from AUT in 2019 and now I'm studying UI/UX Design in Media Design School because I want jump out from my comfortable zone to learn more pratical skills to improve myself. I want to combine these two art forms to create my unique style of design in the future.</p>
                     </div>
                     <div class="column">
                         <img src="images/portrait.jpg" alt="">
