--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <p>Nation: China</p>
                         <p>Education: Bachelor of Visual Arts,<br>
                             Bachelor of Interactive Design</p>
-                        <p>I started to learn drawing since I was 4years old, and I'm good at hand-drawing. I graduated from AUT in 2019 and now I'm studying UI/UX Design in Media Design School because I want jump out from my comfortable zone to learn more pratical skills to improve myself. I want to combine these two art forms to create my unique style of design in the future.</p>
+                        <p>I started to learn drawing since I was 4years old, and I'm good at hand-drawing. I graduated from AUT in 2019 and now I'm studying UI/UX Design in Media Design School because I want to jump out from my comfortable zone and learn more pratical skills to improve myself. I want to combine these two art forms to create my unique style of design in the future.</p>
                     </div>
                     <div class="column">
                         <img src="images/portrait.jpg" alt="">
